# iceops

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  VISION.md  pyproject.toml
.agents/skills/engineering-approach/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  commands.md  concepts.md  engines.md  policy.md  quickstart.md
examples/: demo.py  iceops.yaml  spark_connect_lab.py  spark_lab.py  table_factory.py  trino_lab.py  variations.py
src/iceops/: __init__.py  config.py  errors.py  models.py
src/iceops/api/: __init__.py
src/iceops/catalog/: __init__.py  detect.py
src/iceops/checks/: __init__.py  base.py  deletes.py  manifests.py  metadata_config.py  orphans.py  partitions.py  small_files.py  snapshots.py
src/iceops/cli/: app.py  render.py
src/iceops/engines/: __init__.py  base.py  native.py  spark.py  trino.py
src/iceops/inspect/: __init__.py  collector.py
src/iceops/operators/: __init__.py  _engine_contract.py  apply.py  clean_orphans.py  compact.py  cost.py  doctor.py  expire.py  rewrite_manifests.py  scan.py  tune.py
src/iceops/policy/: __init__.py  resolve.py  schema.py
tests/: conftest.py  test_checks.py  test_clean_orphans.py  test_cli.py  test_expire.py  test_inspect.py  test_operators_diagnose.py  test_rewrite_manifests.py  test_variations.py
tests/e2e/: test_engine_execution.py  test_journeys.py
tests/integration/: test_apply.py  test_clean_orphans.py  test_cli.py  test_compact.py  test_engine_routing.py  test_expire.py  test_inspect.py  test_operators_diagnose.py  test_rewrite_manifests.py  test_spark_compact_lab.py  test_spark_connect_compact_lab.py  test_trino_compact_lab.py  test_tune.py  test_variations.py
tests/integration/trino_stack/: docker-compose.yml  iceberg.properties
tests/unit/: test_clean_orphans_logic.py  test_compact_engines.py  test_expire_logic.py  test_policy.py  test_rewrite_manifests_logic.py  test_stubs.py  test_tune_logic.py
