[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iceops"
version = "0.1.0"
description = "Doctor, janitor, and autopilot for Apache Iceberg tables — no platform required."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Gopi Desupavan", email = "gopidesupavan@gmail.com" }]
keywords = ["iceberg", "lakehouse", "data-engineering", "maintenance", "compaction", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "pyiceberg[pyarrow,sql-sqlite]>=0.9.0",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
glue = ["pyiceberg[glue]"]
spark = ["pyspark[connect]>=3.5"]
trino = ["trino>=0.330"]
duckdb = ["duckdb>=1.0"]

[project.urls]
Homepage = "https://github.com/gopidesupavan/iceops"
Issues = "https://github.com/gopidesupavan/iceops/issues"

[project.scripts]
iceops = "iceops.cli.app:main"

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "prek>=0.4.8",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iceops"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
files = ["src"]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pyiceberg.*", "pyarrow.*", "tomli"]
ignore_missing_imports = true
